[package]
name = "tfs-rust"
edition = "2021"
version = "0.1.0"
rust-version = "1.70"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
mlua = { version = "0.11.4", features = ["async", "lua51", "vendored", "send"] }
mysql_async = "0.36.1"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.8.5"
roxmltree = "0.20"
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
